# neuropy

./: .gitignore  NOTES.md  README.md  flake.nix  justfile  pyproject.toml
.tempBackup/data/: output.txt.bak
data/: Green_19weeks_Neuron4.CNG.swc  center.csv  centerFull.csv  endpoint.csv  endpointFull.csv  endpointFull_10s0e_l1.csv  endpointFull_10s10e_l1.csv  endpointFull_10s10ej_l1.csv  endpointFull_1f0e_l1.csv  extrapolationExamples.7z  output.txt  ugx.xsd
data/backup/: fromUnity.swc
neuropy/: UGXReader.py  VRNReader.py  example_vedo.py  extrapolateFromData.py  extrapolateL1.py  fromUnity.py  main.py  navisTest.py  neurovisorSparseSolver.cs  paraview_writer.py  plotL1.py  solver.py  vrn_reader.py
