[tool.poetry]
name = "neuropy"
version = "0.1.0"
description = ""
authors = ["Logan Reed <me@loganreed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
navis = {git = "https://github.com/navis-org/navis.git", rev = "master"}
numpy = [
    {version = "<1.22", python = "<3.8"},
    {version = "<=1.22.5", python = "^3.8"}
]
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
